--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
     <div class="ball" onclick="onBallClick()">100</div>
 
+    <h2>hiiiii</h2>
+
     <script src="js/main.js"></script>
 </body>
 
