Add utils and change onBallClick

--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
 
     <div class="ball" onclick="onBallClick()">100</div>
 
-    <h2>hiiiii</h2>
-
-    <h3>clone</h3>
 
     <script src="js/main.js"></script>
+    <script src="js/utils.js"></script>
 </body>
 
 </html>
