Add a maxDiameter parameter to onBallClick()

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>The Ball Game</h1>
 
-    <div class="ball first-ball" onclick="onBallClick()">100</div>
+    <div class="ball first-ball" onclick="onBallClick(300)">100</div>
     <div class="ball sec-ball"></div>
 
 
