--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <body>
     <h1>The Ball Game</h1>
 
-    <div class="ball first-ball" onclick="onBallClick(300)">100</div>
-    <div class="ball sec-ball"></div>
+    <div class="ball first-ball" onclick="onBallClick(300, '.first-ball')">100</div>
+    <div class="ball sec-ball" onclick="onBallClick(200, '.sec-ball')">100</div>
+    <div class="ball third-ball" onclick="onThirdBallClick()"></div>
 
 
     <script src="js/main.js"></script>
