Add fourth ball

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
     <div class="ball first-ball" onclick="onBallClick(300, '.first-ball')">100</div>
     <div class="ball sec-ball" onclick="onBallClick(200, '.sec-ball')">100</div>
-    <div class="ball third-ball" onclick="onThirdBallClick()"></div>
+    <div class="ball third-ball" onclick="onThirdBallClick()">Swap</div>
+    <div class="ball fourth-ball" onclick="onFourthBallClick(300, 200)">Reduced</div>
 
 
     <script src="js/main.js"></script>
