--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="ball sec-ball" onclick="onBallClick(200, '.sec-ball')">100</div>
     <div class="ball third-ball" onclick="onThirdBallClick()">Swap</div>
     <div class="ball fourth-ball" onclick="onFourthBallClick(300, 200)">Reduced</div>
+    <div class="ball fifth-ball" onclick="onFifthBallClick()">change color</div>
 
 
     <script src="js/main.js"></script>
