--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div class="ball third-ball" onclick="onThirdBallClick()">Swap</div>
     <div class="ball fourth-ball" onclick="onFourthBallClick(300, 200)">Reduced</div>
     <div class="ball fifth-ball" onclick="onFifthBallClick()">change color</div>
+    <div class="ball sixth-ball" onclick="onSixthBallClick()">reset</div>
 
 
     <script src="js/main.js"></script>
