--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
     <h1>The Ball Game</h1>
 
+    <h2>moves: <span class="count">0</span></h2>
+
     <div class="ball first-ball" onclick="onBallClick(300, '.first-ball')">100</div>
     <div class="ball sec-ball" onclick="onBallClick(200, '.sec-ball')">100</div>
     <div class="ball third-ball" onclick="onThirdBallClick()">Swap</div>
